--- a/bootstrap/src/main/resources/application.properties
+++ b/bootstrap/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-quarkus.datasource.db-kind=h2
-quarkus.datasource.jdbc.url=jdbc:h2:mem:default;DB_CLOSE_DELAY=-1.;NON_KEYWORDS=value
-quarkus.hibernate-orm.database.generation=drop-and-create
-quarkus.hibernate-orm.persistence-xml.ignore=true
+#quarkus.datasource.db-kind=mysql
+quarkus.datasource.reactive=true
+#quarkus.datasource.reactive.url=mysql://localhost:3306/quarkus
+#quarkus.datasource.username=quarkus
+#quarkus.datasource.password=quarkus
+quarkus.hibernate-orm.sql-load-script=inventory.sql
+#quarkus.hibernate-orm.database.generation=drop-and-create
+#quarkus.hibernate-orm.log.sql=true
+
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.validator-url=localhost
 
