--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,6 @@
         <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
         <surefire-plugin.version>3.5.0</surefire-plugin.version>
         <lombok.version>1.18.26</lombok.version>
-        <testcontainers.version>1.15.3</testcontainers.version>
         <mockito.version>3.10.0</mockito.version>
         <groovy.version>4.0.6</groovy.version>
         <spock.version>2.3-groovy-4.0</spock.version>
@@ -42,8 +41,8 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>io.quarkus</groupId>
-                <artifactId>quarkus-universe-bom</artifactId>
+                <groupId>io.quarkus.platform</groupId>
+                <artifactId>quarkus-bom</artifactId>
                 <version>${quarkus.platform.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
@@ -108,10 +107,6 @@
         <dependency>
             <groupId>jakarta.enterprise</groupId>
             <artifactId>jakarta.enterprise.cdi-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-hibernate-validator</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
